Back-end should be fixed, only ran on my laptop because of syntax. Front end and back end merged.
